--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,18 +1,12 @@
-# must be unique in a given SonarQube instance
-sonar.projectKey=my:project
+sonar.projectKey=eljokitenge_laravel
+sonar.organization=eljokitenge
 
-# --- optional properties ---
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=laravel
+#sonar.projectVersion=1.0
 
-# defaults to project key
-sonar.projectKey=laravel
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
 
-# defaults to project name
-sonar.projectName=laravel
-# defaults to 'not provided'
-sonar.projectVersion=1.0
- 
-# Path is relative to the sonar-project.properties file. Defaults to .
-sonar.sources=C:/xampp/htdocs/laravel
- 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
